--- a/package.json
+++ b/package.json
@@ -13,6 +13,9 @@
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
     "express-handlebars": "^5.3.2",
-    "mongoose": "^5.12.13"
+    "express-session": "^1.17.2",
+    "mongoose": "^5.12.13",
+    "nodemon": "^2.0.7",
+    "session": "^0.1.0"
   }
 }
